[package]
name = "rasql-core"
version = "0.0.0"
edition = "2021"
license = "MIT"
description = "SQL analysis and Rust type generation for Rasql"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
tokio-postgres = ["rasql-traits/tokio-postgres", "dep:tokio-postgres"]
uuid = ["dep:uuid"]
rust_decimal = ["dep:rust_decimal"]

[dependencies]
sqlparser = "0.54.0"
rasql-traits = { version = "0.0.0", path = "../rasql-traits" }
quote = "1.0.35"
proc-macro2 = "1.0.93"
syn = { version = "2.0.96", features = ["full"] }
tokio-postgres = { version = "0.7.12", optional = true }
convert_case = "0.7.1"
thiserror = "2.0.11"
uuid = { version = "1.12.1", optional = true }
rust_decimal = { version = "1.36.0", optional = true }
